--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -35,6 +35,8 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git pull --rebase
           git add screenshots/*.png || true
           git commit -m "chore: update screenshots" || echo "No changes to commit"
-          git push
+          git push origin HEAD:main
